--- a/views/admin/election-reset.ejs
+++ b/views/admin/election-reset.ejs
@@ -29,7 +29,7 @@
             <h2>Are you sure you want to reset the current election?</h2>
             <br />
             <p>Enter Account Password:</p>
-            <input type="text" id="super-admin-password" class="text-field" name="super-admin-password" />
+            <input type="password" id="super-admin-password" class="text-field" name="super-admin-password" />
             <br />
             <br />
             <p>Enter the Code Sent to Your Email:</p>
