--- a/views/admin/system-activity-log.ejs
+++ b/views/admin/system-activity-log.ejs
@@ -55,7 +55,7 @@
                 <th>Performed By</th>
                 <th>Role</th>
                 <th>Action</th>
-                <th>Details</th>
+                <!-- <th>Details</th> -->
                 <th>Type</th>
               </tr>
             </thead>
@@ -66,7 +66,7 @@
                 <td><%= log.adminUsername %></td>
                 <td><%= log.adminRole %></td>
                 <td><%= log.eventName %></td>
-                <td><%= log.details %></td>
+               <!-- <td><%= log.details %></td>-->
                 <td><%= log.activityType %></td>
               </tr>
               <% }) %> <% } else { %>
