--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -519,52 +519,10 @@
         }, 1000);
       </script>
 
-      <script>
-        function formatDate(isoString) {
-          const date = new Date(isoString);
-          const options = {
-            month: "long",
-            day: "2-digit",
-            year: "numeric",
-            hour: "2-digit",
-            minute: "2-digit",
-            hour12: true,
-          };
-          return date.toLocaleString("en-US", options).toUpperCase();
-        }
-
-        function updateDateTime() {
-          const datetimeElement = document.getElementById("datetime");
-          if (!datetimeElement) return;
-
-          // Get the initial time from the data attribute
-          let currentTime = new Date(datetimeElement.getAttribute("data-date"));
-
-          function update() {
-            datetimeElement.textContent = formatDate(currentTime);
-            currentTime.setMinutes(currentTime.getMinutes() + 1); // Increment by 1 minute
-          }
-
-          update(); // Set initial formatted date
-          setInterval(update, 60000); // Update every minute (60000ms)
-        }
-
-        document.addEventListener("DOMContentLoaded", updateDateTime);
-      </script>
       <script src="js/dropdown.js"></script>
     </div>
 
-    <footer class="footer">
-      <div class="footer-left">
-        <img src="img/calendar.png" class="footer-img" />
-        <p id="datetime" data-date="<%= electionConfig.fakeCurrentDate %>"></p>
-      </div>
-      <div class="footer-center">
-        <img src="img/copyright.png" class="footer-img" id="copyright-img" />
-        <p>2025 - Fourmula 1</p>
-      </div>
-      <div class="footer-right"></div>
-    </footer>
+    <% include('footer') %> 
 
     <!-- <script>
       const urlParams = new URLSearchParams(window.location.search);
