--- a/views/voter/waiting.ejs
+++ b/views/voter/waiting.ejs
@@ -53,9 +53,7 @@
       </div>
     </div>
 
-    <footer class="footer">
-      <!-- ... footer content ... -->
-    </footer>
+    <% include('footer') %> 
     <script src="/socket.io/socket.io.js"></script>
     <script>
       const socket = io();
