--- a/views/about.ejs
+++ b/views/about.ejs
@@ -227,6 +227,8 @@
       </div>
     </div>
 
+    <% include('homepages/footer')
+
     <footer class="footer">
       <div class="footer-left">
         <img src="img/calendar.png" class="footer-img" />
